# plugin2

.github/workflows/: build.yml
WaveScope_FetchJUCE/: CMakeLists.txt  README.md
WaveScope_FetchJUCE/Source/: Oscilloscope.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
